[package]
name = "rust_tts"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[net]
git-fetch-with-cli = true

[dependencies]
rodio = "0.17.3"
pinyin-translator = { git = "https://github.com/wxxhub/rust-pinyin.git", tag = "v0.2.4"}
lazy_static = "1.4.0"